--- a/less/components/header.less
+++ b/less/components/header.less
@@ -34,6 +34,10 @@ header#top-header {
 
 }
 
+header#nav-header{
+	min-height: 80px;
+}
+
 .navbar {
 	background-color: @body-bg;
 	margin-bottom: 0px;
